# fastapi_zero

./: pyproject.toml
fastapi_zero/: app.py  schemas.py
tests/: test_app.py
